# PCSC_Project

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile  bibliography.bib
doc/examples/: example_input_complex.txt
input files/: InputTest.txt  InputTestComplex.txt  complex_input.txt  real_input.txt
input_files/: real_input.txt
src/: main.cc  main_Ivan.cc  main_examples.cpp
src/exceptions/: Exceptions.h
src/methods/: AbstractEigs.cpp  AbstractEigs.h  AbstractPowerMethod.cpp  AbstractPowerMethod.h  InvPowerMethod.cpp  InvPowerMethod.h  PowerMethod.cpp  PowerMethod.h  QRMethod.cpp  QRMethod.h  ShiftInvPowerMethod.cpp  ShiftInvPowerMethod.h  ShiftPowerMethod.cpp  ShiftPowerMethod.h
src/reader/: FileReader.cpp  FileReader.h  Reader.cpp  Reader.h
test/: test_input_complex.txt  test_input_real.txt  test_methods.cc  test_methods_complex.cc  test_methods_real.cc  test_reader.cc
